# TraitorTrack

./: .dockerignore  .env.dev  .env.development  .env.example  .env.prod  .env.production  .env.testing  .gitignore  .replit  .replit_fixed  ADMIN_GUIDE_TROUBLESHOOTING.md  ALERT_SETUP_EXAMPLE.py  API_DOCUMENTATION.md  API_IMPROVEMENTS_SUMMARY.md  API_OPTIMIZATION_GUIDE.md  API_OPTIMIZATION_SUMMARY.md  API_V2_DOCS.md  AUDIT_LOGGING_GUIDE.md  AWS_DEPLOYMENT_COMPLETE_GUIDE.md  AWS_DEPLOYMENT_FINAL_REPORT.md  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_README.md  AWS_RDS_SETUP.md  BILL_SUMMARY_DOCUMENTATION.md  BUG_REPORT_AND_FIXES.md  CHANGES_SUMMARY.md  CLEANUP_SCRIPT.py  COMPLETE_RESOLUTION_SUMMARY.md  COMPREHENSIVE_SYSTEM_REPORT.md  CONCURRENT_SCANNING_SETUP.txt  CORRECT_DEPLOYMENT_FIX.md  DATABASE_ISOLATION_GUIDE.md  DATABASE_READ_REPLICA_GUIDE.md  DATABASE_SEPARATION_COMPLETE.md  DATABASE_SEPARATION_SUMMARY.md  DATABASE_SETUP_SUMMARY.md  DEBUG_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FINAL_SOLUTION.md  (+681 more)
archived_docs/: README.md
archived_scripts/: check_db_sync.py  fix_admin_passwords.py  fix_production_database.py  fix_production_login.py  safe_production_cleanup.py  simple_cleanup.py  verify_db_connection.py
archived_sql/: cleanup_production_db.sql
archived_test_results/: load_test_50users_failures.csv  load_test_50users_stats_history.csv  load_test_final_50users_stats.csv
attached_assets/: 404 Not Found_1759663370892.heic  502 Bad Gateway_1759662632640.heic  Create Bill - TraitorTrack_1764415121521.heic  Final QR Code (1)_1764409007833.xlsm  Login - Traitor Track_1763449636140.heic  Pasted--workspace-python-safe-production-cleanup-py-2025-12-08_1765224238325.txt  (+31 more)
(+349 files in other folders)
