[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "html5lib>=1.1",
    "qrcode>=8.2",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "gevent>=25.5.1",
    "flask-wtf>=1.2.2",
    "requests>=2.32.3",
    "flask-limiter>=3.12",
    "bleach>=6.2.0",
    "psutil>=7.0.0",
    "aiohttp>=3.11.18",
    "reportlab>=4.4.1",
    "wtforms>=3.2.1",
]
